changed theme color blackest-black to black; fixed theme breakpoints; fixed theme spacing with clamp

--- a/components/button/button.module.css
+++ b/components/button/button.module.css
@@ -47,5 +47,5 @@
 }
 
 .jumbo:hover {
-  @apply bg-core2 text-blackest-black;
+  @apply bg-core2 text-black;
 }
